removed unnecessary dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script src="javascripts/controllers/UserController.js"></script>
     <!-- Services -->
     <script src="javascripts/services/Socket.js"></script>
+    <script src="javascripts/services/UserFactory.js"></script>
 </head>
 <body>
 <h1 ng-bind="ctrl.title">Pure Seed</h1>
